[package]
name = "sahakari_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
chrono = "0.4"
colored = "2.0"
inquire = "0.6"
dirs = "5.0"
urlencoding = "2.1.3"
once_cell = "1.18"
sysinfo = "0.29"